--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ode_inverse_output_v2/best_model2.pth
 ode_inverse_output_v2/last_model.pth
 ode_inverse_output_v2/last_model2.pth
 simulation_results.csv
+check.py
