--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,14 @@
-# Streamlit for the web UI
-streamlit>=1.0
+# Web UI
+streamlit==1.45.1
 
-# Numerical & data handling
-numpy>=1.21
-pandas>=1.3
+# Core numerics & data
+numpy==2.2.6
+pandas==2.2.3
+scipy==1.15.3
 
-# ODE solver
-scipy>=1.7
+# Plotting
+plotly==6.1.1
 
-# Interactive plotting
-plotly>=5.0
-
-# Machine-learning framework
-torch>=1.10
-
-# Preprocessing utilities
-scikit-learn>=1.0
+# Machine learning
+torch==2.7.0
+scikit-learn==1.6.1
